fix broken style

--- a/src/styles/KeyboardWrapper.css
+++ b/src/styles/KeyboardWrapper.css
@@ -58,7 +58,7 @@
 .hg-theme-default .hg-button {
     height: 90px !important;
     font-size: 25px;
-    margin-right: 10px !important;
+    /* margin-right: 10px !important; */
 }
 
 .hg-gaze1 {
