--- a/src/styles/WordSuggestions.css
+++ b/src/styles/WordSuggestions.css
@@ -2,7 +2,7 @@
     height: 90px;
     font-size: 25px;
     background-color: #fff;
-    margin-right: 10px;
+    /* margin-right: 10px; */
     display: inline-block;
     text-align: center;
     box-shadow: 0 0 3px -1px rgba(0, 0, 0, .3);
